--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,10 @@ psycopg2-binary>=2.9.0  # PostgreSQL adapter
 # Data formats
 pyarrow>=12.0.0  # For Parquet support
 
+# Visualization
+streamlit==1.28.0
+plotly==5.17.0
+
 # Environment variables
 python-dotenv>=1.0.0
 
