--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,9 @@ plotly==5.17.0
 # Environment variables
 python-dotenv>=1.0.0
 
+# Scheduling
+schedule>=1.2.0
+
 # Testing
 pytest>=7.4.0
 pytest-cov>=4.1.0
