Update requirements.txt to specify exact versions for core dependencies, including Streamlit, Plotly, Pandas, SQLAlchemy, and Psycopg2-binary, ensuring compatibility and stability across environments.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,6 @@
-# Core dependencies
-pandas>=2.0.0
-numpy>=1.24.0
-requests>=2.31.0
-
-# Database
-sqlalchemy>=2.0.0
-psycopg2-binary>=2.9.0  # PostgreSQL adapter
-
-# Data formats
-pyarrow>=12.0.0  # For Parquet support
-
-# Visualization
-streamlit==1.28.0
-plotly==5.17.0
-
-# Environment variables
-python-dotenv>=1.0.0
-
-# Scheduling
-schedule>=1.2.0
-
-# Testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
-
-# Code quality
-black>=23.0.0
-flake8>=6.0.0
-
-schedule==1.2.0
-schedule==1.2.0
+streamlit==1.50.0
+plotly==6.5.2
+pandas==2.1.0
+sqlalchemy==2.0.20
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
