--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.28.0
-plotly==5.17.0
-pandas==2.1.0
-sqlalchemy==2.0.20
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
-rich==13.7.0
+streamlit
+plotly
+pandas
+sqlalchemy
+psycopg2-binary
+python-dotenv
