--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit>=1.40.0
-plotly>=5.20.0
-pandas>=2.0.0
-sqlalchemy>=2.0.0
-psycopg2-binary>=2.9.0
-python-dotenv>=1.0.0
+streamlit
+plotly
+pandas
+sqlalchemy
+psycopg2-binary
