--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-plotly
-pandas
-sqlalchemy
-psycopg2-binary
+streamlit==1.41.1
+rich==13.9.4
+plotly==5.24.1
+pandas==2.2.3
+sqlalchemy==2.0.36
+psycopg2-binary==2.9.10
